@@ -1,3 +1,9 @@
+2009-12-18 Frieder Ferlemann <Frieder.Ferlemann AT web.de>
+
+	* device/lib/abs.c, device/lib/labs.c: assembler version 
+	  for mcs51, other targets slightly shorter too
+	* support/regression/tests/abs.c: added regression test
+
 2009-12-17 Indy Sams < drift_solutions AT users.sourceforge.net >
 
 	* device/lib/_strpbrk.c: fixed bug #2908537 (svn commit by Frieder)
